@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4.1: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2008-05-13" />
+<meta name="date" content="2008-05-14" />
 <style type="text/css">
 
 /*
@@ -133,7 +133,7 @@ dt {
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2008-05-13</td></tr>
+<td>2008-05-14</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.15</td></tr>
 </tbody>
@@ -591,13 +591,17 @@ available if Geany was compiled with support for VTE.</td>
 </tr>
 <tr><td><em>none</em></td>
 <td>[files ...]</td>
-<td>Open all given files at startup. This option causes
+<td><p class="first">Open all given files at startup. This option causes
 Geany to ignore loading stored files from the last
 session (if enabled).
 Geany also recognises line and column information when
 appended to the filename with colons, e.g.
 &quot;geany foo.bar:10:5&quot; will open the file foo.bar and
-place the cursor in line 10 at column 5.</td>
+place the cursor in line 10 at column 5.</p>
+<p class="last">Projects can also be opened but a project file (*.geany)
+must be the first non-option argument. All additionally
+given files are ignored.</p>
+</td>
 </tr>
 </tbody>
 </table>
@@ -4107,7 +4111,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2008-05-14 14:29 UTC.
+Generated on: 2008-05-18 16:23 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
