@@ -243,6 +243,10 @@ Short option  Long option              Function
                                        appended to the filename with colons, e.g.
                                        "geany foo.bar:10:5" will open the file foo.bar and
                                        place the cursor in line 10 at column 5.
+
+                                       Projects can also be opened but a project file (\*.geany)
+                                       must be the first non-option argument. All additionally
+                                       given files are ignored.
 ============  =======================  =================================================
 
 Geany supports all generic GTK options, a list is available on the
